# KidSafe-Alphabet-Tutor-Vision-Speech-

./: .gitignore  README.md
backend/: env.example  pyproject.toml  run_livekit_agent.py
backend/app/: config.py  lessons.json  lessons_complete.json  livekit_voice_agent.py  main_livekit.py
backend/app/api/: __init__.py  auth.py  health.py  memory.py  vision.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  curriculum_service.py  memory_service.py  phoneme_service.py  safety_service.py  vision_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: LiveKitRoom.js
frontend/src/components/App/: App.css  App.js
frontend/src/components/Avatar/: AvatarBubble.css  AvatarBubble.js
frontend/src/components/Camera/: CameraPanel.css  CameraPanel.js
frontend/src/components/Lesson/: LessonCard.css  LessonCard.js
frontend/src/components/Memory/: MemoryPanel.css  MemoryPanel.js
frontend/src/components/Progress/: ProgressStrip.css  ProgressStrip.js
frontend/src/components/Settings/: ParentalGate.css  ParentalGate.js  SettingsPanel.css  SettingsPanel.js
project_requirements/: AI Engineer Assessment KidSafe Alphabet Tutor.docx  AI Engineer Assessment KidSafe Alphabet Tutor.md
